--- a/demo/example_index.html
+++ b/demo/example_index.html
@@ -3,12 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <title>Keen IO Explorer</title>
+
+  <!-- Dependencies -->
+  <link href="//cdnjs.cloudflare.com/ajax/libs/c3/0.4.11-rc4/c3.min.css" rel="stylesheet" type="text/css">
+  <script src='//oss.maxcdn.com/d3js/3.5.12/d3.min.js'></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/c3/0.4.11-rc4/c3.min.js"></script>
+
   <link href="https://d1kk3lo5kv9rxi.cloudfront.net/css/font/gotham/woff/a.css?v=1175" rel="stylesheet" type="text/css">
   <link href="https://d1kk3lo5kv9rxi.cloudfront.net/css/font/gotham/woff/b.css?v=1175" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+
   <link rel="stylesheet" href="/dist/keen-explorer.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <script src="https://d26b395fwzu5fz.cloudfront.net/3.4.0-rc2/keen.min.js" type="text/javascript"></script>
+  <script src="https://d26b395fwzu5fz.cloudfront.net/3.2.7/keen.min.js" type="text/javascript"></script>
   <script src="/dist/keen-explorer.js"></script>
   <style>
     #explorer {
